# yumbook

./: .gitignore  README.md  README.rst  pyproject.toml
scripts/: cleanup.sh
yumbook/: app.py
yumbook/schema/: recipe.sql
yumbook/schema/database/: __init__.py  briyani.db  pancakes.db  tomatosoup.db
yumbook/static/: package-lock.json  package.json
yumbook/static/css/: style.css
yumbook/static/js/: formValidate.js
yumbook/static/js/lib/: lucide.js
yumbook/templates/: 404.html  base.html  create.html  export.html  index.html  preview.html  sign_in.html  sign_up.html
