[tool.poetry]
name = "yumbook"
version = "0.1.0"
description = "A recipe library and printable generator"
authors = ["grittypuffy <grittypuffy@riseup.net>"]
license = "GNU Affero General Public License 3.0 or later"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
